# healthscript

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  fly.toml
badge-service/: Cargo.toml
badge-service/src/: main.rs
healthscript/: Cargo.toml
healthscript-cli/: Cargo.toml  README.md
healthscript-cli/src/: main.rs
healthscript/src/: lib.rs
healthscript/tests/: display.rs  error.rs  success.rs
src/: lib.rs
