[package]
name = "healthscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
jaq = "1.4.0"
logos = "0.14.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
strsim = "0.11.1"
yansi = "1.0.1"

[dev-dependencies]
expect-test = "1.5.0"
