[package]
name = "healthscript-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
healthscript = { path = "../healthscript" }
tokio = { version = "1.38.0", default-features = false, features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
