[package]
name = "healthscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.1"
async-recursion = "1.1.1"
base64 = "0.22.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
jaq-core = "1.4.0"
jaq-interpret = "1.4.0"
jaq-parse = "1.0.2"
jaq-std = "1.4.0"
jaq-syn = "1.1.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde_json = "1.0.117"
strsim = "0.11.1"
tracing = "0.1.40"
yansi = "1.0.1"

[dev-dependencies]
expect-test = "1.5.0"
