[package]
name = "healthscript"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
async-recursion = "1.1.1"
base64 = "0.22.1"
chumsky = { version = "1.0.0-alpha.7", features = ["label"] }
hickory-resolver = "0.24.1"
jaq-core = "1.4.0"
jaq-interpret = "1.4.0"
jaq-parse = "1.0.2"
jaq-std = "1.4.0"
jaq-syn = "1.1.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
serde_json = "1.0.117"
strsim = "0.11.1"
surge-ping = "0.8.1"
tokio = { version = "1.38.0", default-features = false, features = ["full"] }
# tokio = { version = "1.38.0", default-features = false, features = ["rt", "time", "net"] }
tracing = "0.1.40"
yansi = "1.0.1"

[dev-dependencies]
expect-test = "1.5.0"
